// proto3 버전 사용
syntax = "proto3";

import "general.proto";

// package 세팅
package grpc;

// java option 세팅
option java_package = "com.mobigen.libs.grpc";
//option java_multiple_files = true;
option java_outer_classname = "Storage";

option optimize_for = SPEED;

// 함수 리스트
service StorageService {
  rpc Overview(Empty) returns (OverviewResponse);
  rpc StorageType(StorageTypeRequest) returns (StorageTypeResponse);
  rpc Adaptor(AdaptorRequest) returns (AdaptorResponse);
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc InsertUpdateType(Empty) returns (Empty);
  rpc GetType(Empty) returns (Empty);
  rpc DeleteType(Empty) returns (Empty);
}

message OverviewResponse {
  int32 total_storage = 1;
  //  message Summary {
  //    message NumOfStorageType {
  //      string storage_type_name = 1;
  //      string value = 2;
  //    }
  //    repeated NumOfStorageType num_of_storage_type = 1;
  //    message StatusOfStorage {
  //      string status = 1;
  //    }
  //  }
  //  Summary summary = 2;
}

message StorageTypeModel {
  string name = 1;
  bytes icon = 2;
}
message StorageTypeRequest {
  Method method = 1;
  StorageTypeModel model = 2;
}
message StorageTypeResponse {
  repeated StorageTypeModel models = 1;
}

message AdaptorSchema {
  string key = 1;
  string type = 2;
  bool required = 3;
}

message AdaptorModel {
  string id = 1;
  string storageType = 2;
  string name = 3;
  string version = 4;
  string url = 5;
  string path = 6;
  string driver = 7;
  repeated AdaptorSchema schema = 8;
  string authType = 9;
}

message AdaptorRequest {
  Method method = 1;
  AdaptorModel model = 2;
}

message AdaptorResponse {
  repeated AdaptorModel models = 3;
}

message ConnectionInfo {
  string key = 1;
  string type = 9;
  oneof value {
    string stringValue = 2;
    int32 int32Value = 3;
    int64 int64Value = 4;
    bool boolValue = 5;
    bytes bytesValue = 6;
    float floatValue = 7;
    double doubleValue = 8;
  }
}
message InfoModel {
  string id = 1;
  string adaptorId = 2;
  string storageType = 3;
  string name = 4;
  string user_desc = 5;
  string total_data = 6;
  string regi_data = 7;
  string status = 8;
  repeated ConnectionInfo connInfo = 9;
}

message InfoRequest {
  Method method = 1;
  InfoModel model = 2;
}

message InfoResponse {
  repeated InfoModel models = 3;
}