syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mobigen.datafabric.share.interfaces";
option java_outer_classname = "PortalProto";

import "google/protobuf/empty.proto";
import "data-model.proto";
import "storage.proto";
import "utilities.proto";

service PortalService {
  rpc Search(ReqSearch) returns (ResSearch);
  rpc RecentSearches(google.protobuf.Empty) returns (ResRecentSearches);
}

message ReqSearch {
  string keyword = 1;
  Pageable pageable = 2;
  map<string, string> detailSearch = 3;
  map<string, ListString> filterSearch = 4;
}

message ResSearch {
  string code = 1;
  string errMsg = 2;
  message Data {
    SearchResponse searchResponse = 1;
  }
  Data data = 3;
}

message ListString {
  repeated string value = 1;
}

message SearchResponse {
  Pageable pageable = 1;
  map<string, ListMapStrNumber> filters = 2;
  SearchContent contents = 3;
}

message ListMapStrNumber {
  message MapStrNumber {
    string key = 1;
    int64 value = 2;
  }
  repeated MapStrNumber value = 1;
}

message SearchContent {
  repeated DataModel dataModels = 1;
  repeated Storage storages = 2;
}

message ResRecentSearches{
  string code = 1;
  string errMsg = 2;
  message Data {
    repeated string recentSearches = 1;
  }
  Data data = 3;
}
